# rust-biotools

./: .travis.yml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: bed.rs  bed12.rs  lib.rs  main.rs  transcriptome.rs  utils.rs
test/: test_biotools.py
test/data/: test.bed12  test.refFlat
