[project]
name = "rust-biotools"
version = "0.1.0"
description = "python module for bio analysis with rust backend"
authors = [
    {"name" = "Douglas Wu" },
    {"email" = "wckdouglas@gmail.com"}
]
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies=["maturin~=0.12.11"]

[project.optional-dependencies]
test = ["pytest==7.1.1"]

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"
